# deepin-network-displays

./: .gitignore  meson.build
.reuse/: dep5
.tx/: config
debian/: changelog  control  copyright  rules
misc/lib/deepin-daemon/service-trigger/: airplane_handle.service.json
misc/lib/systemd/user/: com-deepin-Cooperation-NetworkDisplay.service
misc/usr/share/dbus-1/services/: com.deepin.Cooperation.NetworkDisplay.service
plugins/: .clang-format  CMakeLists.txt
plugins/common/: wirelesscastingmodel.cpp  wirelesscastingmodel.h
plugins/dcc-wirelesscasting-plugin/configs/: org.deepin.dde.control-center.casting.json
plugins/dcc-wirelesscasting-plugin/images/: resources.qrc
plugins/dcc-wirelesscasting-plugin/src/: castingmodule.cpp  castingmodule.h  wirelesscasting.cpp  wirelesscasting.h
plugins/dcc-wirelesscasting-plugin/translations/: Casting_en_US.ts  translations.qrc
plugins/dock-wirelesscasting-plugin/res/: resources.qrc
plugins/dock-wirelesscasting-plugin/src/: quickpanelwidget.cpp  quickpanelwidget.h  wirelesscasting.cpp  wirelesscasting.h  wirelesscastingapplet.h  wirelesscastingitem.cpp  wirelesscastingitem.h  wirelesscastingplugin.cpp  wirelesscastingplugin.h
po/: POTFILES.in  ady.po  af.po  af_ZA.po  ak.po  am.po  am_ET.po  ar.po  ar_EG.po  ast.po  az.po  bg.po  bn.po  bo.po  bqi.po  br.po  ca.po  cgg.po  cs.po  da.po  de.po  de_CH.po  de_DE.po  deepin-network-displays.pot  el.po  el_GR.po  en_AU.po  en_GB.po  en_NO.po  en_US.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fil.po  fr.po  gl.po  gl_ES.po  (+63 more)
src/: main.c  meson.build  nd-dbus-manager.c  nd-dbus-manager.h  nd-dbus-sink.c  nd-dbus-sink.h  nd-dummy-provider.c  nd-dummy-wfd-sink.c  nd-meta-provider.c  nd-meta-provider.h  nd-meta-sink.c  nd-nm-device-registry.c  nd-provider.c  nd-pulseaudio.c  nd-pulseaudio.h  nd-screencast-portal.c  nd-sink-list.c  nd-sink-row.c  nd-sink.c  nd-wfd-mice-provider.c  nd-wfd-mice-sink.c  nd-wfd-p2p-provider.c  nd-wfd-p2p-sink.c  nd-window.c
src/wfd/: wfd-media-factory.c
toolGenerate/qdbusxml2cpp/: gnome-network-displays.gresourceAdaptor.cpp  gnome-network-displays.gresourceAdaptor.h
